--- a/FivemServerStatus-main/FivemServerStatus-main/config.json
+++ b/FivemServerStatus-main/FivemServerStatus-main/config.json
@@ -1,10 +1,10 @@
 {
-    "URL_SERVER": "http://185.239.238.111:30190",
+    "URL_SERVER": "http://X.X.X.X:30190",
     "SERVER_NAME": "WESTBENGAL ROLEPLAY",
     "SERVER_LOGO": "https://cdn.discordapp.com/attachments/1006486368358236281/1016574198866509874/IMG_20220902_204307.jpg",
     "EMBED_COLOR": "#00f931",
     "PERMISSION": "Administrator",
-    "BOT_TOKEN": "MTAxNzQzNzQ2NDM4MzcyMTU2Mg.GVo5K-._Ftqr6w6utMgf0ho8aH1h8jGI7raGn7WFbA_LA",
+    "BOT_TOKEN": "BOT-TOKEN",
     "CHANNEL_ID": "1017446358581526611",
     "MESSAGE_ID": "1017446358581526611",
     "SUGGESTION_CHANNEL": "1017446358581526611",
